--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
   margin: 15px 15px 15px 20px;
+  margin: 0 100px;
 }
 #col-1 {
   position: relative;
-  width: 50%;
+  width: 70%;
   float: left;
   height: 100%;
 
@@ -12,7 +13,7 @@ body {
 
 #col-2 {
   position: relative;
-  width: 50%;
+  width: 30%;
   float: right;
   height: 100%;
 
@@ -21,4 +22,7 @@ body {
 .inline-elements {
   display: inline;
   padding: 0rem 0.5rem;
+}
+.heading {
+  color: blue;
 }
